Fix content plugin, extra fields for check system plugin and etc.

--- a/plg_radicalmicro_menu/forms/menu.xml
+++ b/plg_radicalmicro_menu/forms/menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ @package   pkg_radicalmicro
-  ~ @version   0.2.1
+  ~ @version   __DEPLOY_VERSION__
   ~ @author    Dmitriy Vasyukov - https://fictionlabs.ru
   ~ @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
   ~ @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -10,44 +10,47 @@
 
 <form>
     <fields name="params" addfieldpath="/plugins/system/radicalmicro/fields">
-        <fieldset name="radicalmicro_schema">
-            <field name="radicalmicro_schema_menu_enable"
-                   type="radio"
-                   default="0"
-                   class="btn-group"
-                   label="PLG_RADICALMICRO_MENU_PARAM_ENABLE"
-                   layout="joomla.form.field.radio.switcher"
-                   description="PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC">
-                <option value="0">JNO</option>
-                <option value="1">JYES</option>
-            </field>
+        <fieldset name="radicalmicro" label="PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_LABEL">
+            <fieldset name="radicalmicro_schema" label="PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_SCHEMA_LABEL">
+                <field name="radicalmicro_schema_menu_enable"
+                       type="radio"
+                       default="0"
+                       class="btn-group"
+                       label="PLG_RADICALMICRO_MENU_PARAM_ENABLE"
+                       layout="joomla.form.field.radio.switcher"
+                       description="PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC">
+                    <option value="0">JNO</option>
+                    <option value="1">JYES</option>
+                </field>
 
-            <field type="note"
-                   name="radicalmicro_schema_menu_note"
-                   class="alert alert-info"
-                   label="PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER"
-                   description="PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER_DESC"
-                   showon="radicalmicro_schema_menu_enable:1"
-            />
+                <field type="note"
+                       name="radicalmicro_schema_menu_note"
+                       class="alert alert-info w-100"
+                       label="PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER"
+                       description="PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER_DESC"
+                       showon="radicalmicro_schema_menu_enable:1"
+                />
 
-            <field type="schematypes"
-                   name="radicalmicro_schema_menu_type"
-                   default="article"
-                   label="PLG_RADICALMICRO_MENU_PARAM_SCHEMA_TYPE"
-                   showon="radicalmicro_schema_menu_enable:1">
-            </field>
-        </fieldset>
-        <fieldset name="radicalmicro_meta">
-            <field name="radicalmicro_meta_menu_enable"
-                   type="radio"
-                   default="0"
-                   class="btn-group"
-                   label="PLG_RADICALMICRO_MENU_PARAM_ENABLE"
-                   layout="joomla.form.field.radio.switcher"
-                   description="PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC">
-                <option value="0">JNO</option>
-                <option value="1">JYES</option>
-            </field>
+                <field type="schematypes"
+                       name="radicalmicro_schema_menu_type"
+                       default="article"
+                       label="PLG_RADICALMICRO_MENU_PARAM_SCHEMA_TYPE"
+                       showon="radicalmicro_schema_menu_enable:1">
+                </field>
+            </fieldset>
+
+            <fieldset name="radicalmicro_meta" label="PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_META_LABEL">
+                <field name="radicalmicro_meta_menu_enable"
+                       type="radio"
+                       default="0"
+                       class="btn-group"
+                       label="PLG_RADICALMICRO_MENU_PARAM_ENABLE"
+                       layout="joomla.form.field.radio.switcher"
+                       description="PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC">
+                    <option value="0">JNO</option>
+                    <option value="1">JYES</option>
+                </field>
+            </fieldset>
         </fieldset>
     </fields>
 </form>
