--- a/plg_radicalmicro_content/forms/content.xml
+++ b/plg_radicalmicro_content/forms/content.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ @package   pkg_radicalmicro
-  ~ @version   __DEPLOY_VERSION__
+  ~ @version   0.2.4
   ~ @author    Dmitriy Vasyukov - https://fictionlabs.ru
   ~ @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
   ~ @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
