--- a/plg_radicalmicro_menu/forms/menu.xml
+++ b/plg_radicalmicro_menu/forms/menu.xml
@@ -9,7 +9,7 @@
   -->
 
 <form>
-    <fields name="params" addfieldpath="/plugins/system/radicalmicro/fields">
+    <fields name="params" addfieldprefix="RadicalMicro\Fields">
         <fieldset name="radicalmicro" label="PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_LABEL">
             <fieldset name="radicalmicro_schema" label="PLG_RADICALMICRO_MENU_FIELDSET_RADICALMICRO_SCHEMA_LABEL">
                 <field name="radicalmicro_schema_menu_enable"
@@ -31,11 +31,12 @@
                        showon="radicalmicro_schema_menu_enable:1"
                 />
 
-                <field type="schematypes"
+                <field type="radicalmicroschematypes"
                        name="radicalmicro_schema_menu_type"
                        default="article"
                        label="PLG_RADICALMICRO_MENU_PARAM_SCHEMA_TYPE"
-                       showon="radicalmicro_schema_menu_enable:1">
+                       showon="radicalmicro_schema_menu_enable:1"
+                >
                 </field>
             </fieldset>
 
